--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.60.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.6.2",
     "react-simple-captcha": "^9.3.1",
