--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,46 +1,51 @@
 {
-  "name": "bistro-boss-client",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@smastrom/react-rating": "^1.5.0",
-    "@tailwindcss/vite": "^4.1.10",
-    "@tanstack/react-query": "^5.83.0",
-    "axios": "^1.10.0",
-    "firebase": "^11.10.0",
-    "localforage": "^1.10.0",
-    "match-sorter": "^8.0.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-google-recaptcha": "^3.1.0",
-    "react-hook-form": "^7.60.0",
-    "react-icons": "^5.5.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^7.6.2",
-    "react-simple-captcha": "^9.3.1",
-    "react-tabs": "^6.1.0",
-    "sort-by": "^1.2.0",
-    "sweetalert2": "^11.22.2",
-    "swiper": "^11.2.10",
-    "tailwindcss": "^4.1.10"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "daisyui": "^5.0.43",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.5"
-  }
+    "name": "bistro-boss-client",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "homepage": "https://your-username.github.io/bistro-boss",
+
+    "dependencies": {
+        "@smastrom/react-rating": "^1.5.0",
+        "@tailwindcss/vite": "^4.1.10",
+        "@tanstack/react-query": "^5.83.0",
+        "axios": "^1.10.0",
+        "firebase": "^11.10.0",
+        "localforage": "^1.10.0",
+        "match-sorter": "^8.0.3",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-google-recaptcha": "^3.1.0",
+        "react-hook-form": "^7.60.0",
+        "react-icons": "^5.5.0",
+        "react-responsive-carousel": "^3.2.23",
+        "react-router-dom": "^7.6.2",
+        "react-simple-captcha": "^9.3.1",
+        "react-tabs": "^6.1.0",
+        "sort-by": "^1.2.0",
+        "sweetalert2": "^11.22.2",
+        "swiper": "^11.2.10",
+        "tailwindcss": "^4.1.10"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.25.0",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "@vitejs/plugin-react": "^4.4.1",
+        "daisyui": "^5.0.43",
+        "eslint": "^9.25.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "gh-pages": "^6.3.0",
+        "globals": "^16.0.0",
+        "vite": "^6.3.5"
+    }
 }
