--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,13 +12,13 @@
         "deploy": "gh-pages -d build"
     },
     "homepage": "https://your-username.github.io/bistro-boss",
-
     "dependencies": {
         "@smastrom/react-rating": "^1.5.0",
         "@tailwindcss/vite": "^4.1.10",
         "@tanstack/react-query": "^5.83.0",
         "axios": "^1.10.0",
         "firebase": "^11.10.0",
+        "framer-motion": "^12.23.6",
         "localforage": "^1.10.0",
         "match-sorter": "^8.0.3",
         "react": "^19.1.0",
